--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,8 @@ uuid = "40d3f259-c584-404d-8eb0-357259e4d2ed"
 authors = ["Lixing Li"]
 version = "1.0.0-DEV"
 
+[deps]
+
 [compat]
 julia = "1.6.7"
 
